fix active nav to viewport height and hide overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -81,7 +81,7 @@ html
     top: 0
     left: 0
     width: 100%
-    height: 100%
+    height: var(--max-height)
     padding: 25%
     box-sizing: border-box
     background: $emphasis-color
